 are kept in .mnemosyne/backup.
-support for multiple sound tags per field (requested by compiu).
-removed a few rarely used options from the configuration dialog and
 placed them in .mnemosyne/config.py, a new file which can be used to
 set these and other rarely used options.
-increase the maximum value of 'increase size of non-latin characters'
 to 200 (requested by Mike Charlton).
-don't count inactive cards in the grade distribution in the statistics
 window (reported by Joonatan Kaartinen).
-add support for translations. (German translation provided by Martin Mueller,
 Spanish by Daniel Alvarez Wise and Juan Alonsa, Dutch by Edwin de Jong) 
 The translation will be chosen automatically based on your system's 
 localisation, but can be overridden by editing the 'locale' variable in 
 .mnemosyne/config.py. 
-improved tooltips.
-added desktop file, so that Mnemosyne shows up in the application menu
 under Linux.
-more verbose error messages when an import failed, showing the line that
 failed to parse.
-log uploading now works if a proxy is needed to access the web.
-added support for Unicode filenames.
-recreate user id from history folder in case the config file was 
 accidentally deleted.
-don't exit when final save failed (requested by lebowski_404).
-added more supported sound and picture formats.
-don't stumble over (invalid) unicode in latex commands (reported by Tomek
 Guzialek).
-fixed 'Save as' option.

	
MNEMOSYNE 0.9.10 : 2007-10-28

-added 3-sided cards, to make dealing with vocabulary in foreign scripts 
 easier. Right clicking the text field in 'add cards' gives you to option
 to switch to 3-sided card input, which replaces the question and answer
 fields by 3 fields: written form, pronunciation, translation. After 
 selecting an initial grade, 2 cards will be added:

  Q: written form
  A: pronunciation
     translation

 and

  Q: translation
  A: written form
     pronunciation  
